Added standard pubs;

--- a/client/views/games/sudoku/sudoku.html
+++ b/client/views/games/sudoku/sudoku.html
@@ -1,9 +1,11 @@
 <template name="sudoku">
 	<div id="view-sudoku">
+		<h1>Sudoku</h1>
 		{{#with currentGame}}
+			k
 			{{#each rows}}
 				<div class="row">
-					{{#each fields}}
+					{{#each this}}
 						<div class="col-xs-1 cell">{{this}}</div>
 					{{/each}}
 				</div>
