--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -1,3 +1,25 @@
 <template name="arenalobby">
+    <div id="view-arenalobby">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6">
+                    {IMAGE}
+                </div>
+                <div class="col-xs-6">
+                    {NAME}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="button btn btn-primary"> PLAY GAME</div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="button btn btn-primary"> CHALLENGE</div>
 
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 </template>
