--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -1,5 +1,23 @@
 #view-sudoku {
   .cell {
     border: 1px solid #aaa;
+    height: 50px;
+    width: 11.1%;
+    display: table-cell;
+    font-size: 24px;
+    padding-top: 7px;
+    text-align: center;
+  }
+  .cell:nth-child(3n) {
+    border-right: 2px solid #000;
+  }
+  .cell:nth-child(9) {
+    border-right: 1px solid #aaa;
+  }
+  .row:nth-child(3n + 1) {
+    border-bottom: 2px solid #000;
+  }
+  .row:nth-child(10) {
+    border-bottom: 1px solid #aaa;
   }
 }
