--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -7,6 +7,7 @@
     font-size: 24px;
     padding-top: 7px;
     text-align: center;
+    cursor: pointer;
   }
   .cell:nth-child(3n) {
     border-right: 2px solid #000;
@@ -14,10 +15,11 @@
   .cell:nth-child(9) {
     border-right: 1px solid #aaa;
   }
-  .row:nth-child(3n + 1) {
+  .row:nth-child(3n + 2) {
     border-bottom: 2px solid #000;
   }
-  .row:nth-child(10) {
+  .row:nth-child(11) {
     border-bottom: 1px solid #aaa;
   }
+
 }
