--- a/client/views/login/login.html
+++ b/client/views/login/login.html
@@ -17,5 +17,6 @@
                 </div>
             </div>
 		</form>
+        <a href="{{pathFor 'register'}}">register</a>
     </div>
 </template>
