--- a/client/views/register/register.html
+++ b/client/views/register/register.html
@@ -1,3 +1,33 @@
 <template name="register">
-
+    <div class="container" id="view-login">
+        <form id="register-form">
+            <div class="row">
+                <div class="col-xs-12 form-group">
+                    <label for="firstname">First Name</label>
+                    <input type="text" class="form-control" id="firstname" placeholder="Firstname"/>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <label for="username">Last Name</label>
+                    <input type="text" class="form-control" id="lastname" placeholder="Lastname"/>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="Username"/>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <label for="username">Email</label>
+                    <input type="text" class="form-control" id="email" placeholder="Email Address"/>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password"/>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <button class="col-xs-12 btn btn-primary" id="register-button">
+                        <span class="fa fa-spinner fa-spin" style="display: none;"></span>Register
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
 </template>
