Routing added after registration

--- a/client/views/login/login.html
+++ b/client/views/login/login.html
@@ -17,6 +17,6 @@
                 </div>
             </div>
 		</form>
-        <a href="{{pathFor 'register'}}">register</a>
+        <a href="{{pathFor 'register'}}">Create Account</a>
     </div>
 </template>
