--- a/client/views/register/register.html
+++ b/client/views/register/register.html
@@ -1,4 +1,5 @@
 <template name="register">
+    <h2> Register an account</h2>
     <div class="container" id="view-login">
         <form id="register-form">
             <div class="row">
