adding salert and adding basic sudoku validation;

--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -6,6 +6,10 @@
 	<link rel="icon" href="/favicon.png" type="image/png" />
 </head>
 
+<body>
+	{{> sAlert}}
+</body>
+
 
 <template name="layout">
 	{{!-- The main layout template --}}
