added the closest arena function

--- a/client/views/arenaranking/arenaranking.html
+++ b/client/views/arenaranking/arenaranking.html
@@ -1,3 +1,28 @@
 <template name="arenaranking">
+    <div id="view-arenaranking">
+      <div class="row kingRow">
+          <div class="col-xs-4 col-xs-offset-4 kingImage">{IMAGE OF KING}</div>
+      </div>
+        <div class="row">
+          <div >
+              <table class="table">
+              <thead>
+              <tr>
+                  <th>UserName</th>
+                  <th>Score</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                  <td>John</td>
+                  <td>1000</td>
+              </tr>
 
+              </tbody>
+              </table>
+
+          </div>
+
+        </div>
+    </div>
 </template>
