--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -2,4 +2,25 @@
 @import "../../variables";
 
 #view-arenalobby{
+  .lobbyDescription,.lobbyImage{
+    text-align: center;
+    border:1px solid red;
+    height: 80px;
+
+  }
+  .buttonRow{
+    margin-top: 20px;
+    height: 80px;
+    text-align: center;
+
+  }
+
+  .kingRow{
+    height: 60px;
+    border: 1px solid blue;
+  }
+  .kingImage{
+    text-align: center;
+    border: 1px solid green;
+  }
 }
