Added end-to-end from map to sudoku

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -11,7 +11,7 @@
             </div>
             <div class="row buttonRow">
                 <div class="col-xs-12">
-                    <div class="button btn btn-primary"> PLAY GAME</div>
+                    <button class="button btn btn-primary" data-action="play-game"> PLAY GAME</button>
                 </div>
             </div>
             <div class="row buttonRow">
