--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -23,7 +23,7 @@
                 <div class="col-xs-4 col-xs-offset-4 kingImage">{IMAGE OF KING}</div>
 
                     <div class="col-xs-6">
-                        <a href="arenaranking" class="button btn btn-primary"> View Ranks</a>
+                        <a href="/arena/{{arenaId}}/ranking" class="button btn btn-primary"> View Ranks</a>
                     </div>
 
 
