--- a/client/views/dashboard/dashboard.html
+++ b/client/views/dashboard/dashboard.html
@@ -5,6 +5,10 @@
 			<button class="full-width btn btn-primary" data-arena-id="{{closest._id}}">
 				Login to {{closest.name}}
 			</button>
+            {{else}}
+            <button class="full-width btn btn-primary getToButton">
+                Get to {{closest.name}}
+            </button>
         {{/if}}
         {{>mapControl}}
 
