Fixed issues with sudoku; Added submenu for play game;

--- a/client/views/games/sudoku/sudoku.html
+++ b/client/views/games/sudoku/sudoku.html
@@ -4,6 +4,8 @@
 
 		<p>Timer: <span id="timer">{{displayTime}}</span></p>
 
+		<a href="/arena/{{arena._id}}">Go Back to Arena</a>
+
 		<div id="number-select" style="display: none;">
 			<div class="row">
 				<div class="number col-xs-4">1</div>
