--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -2,25 +2,33 @@
 @import "../../variables";
 
 #view-arenalobby{
-  .lobbyDescription,.lobbyImage{
+  .lobbyDescription, .lobbyImage {
     text-align: center;
     border:1px solid red;
     height: 80px;
 
   }
-  .buttonRow{
+  .buttonRow {
     margin-top: 20px;
     height: 80px;
-    text-align: center;
+    text-align: left;
 
   }
 
-  .kingRow{
+  .kingRow {
     height: 60px;
     border: 1px solid blue;
   }
-  .kingImage{
+  .kingImage {
     text-align: center;
     border: 1px solid green;
+  }
+
+
+  button {
+    .fa-sort-down {
+      top: -2px;
+      position: relative;
+    }
   }
 }
