change to distance

--- a/client/views/common.less
+++ b/client/views/common.less
@@ -24,6 +24,10 @@
   width: 100%;
 }
 
+
+html{
+  //background-image: url("");
+}
 /*
  * This is intended to be used for bootstrap col-??-? classes (layout). By default all col-* classes of bootstrap add
  * a 15px padding left and right. This overwrites this padding
