Local changes to the numberpad;

--- a/client/views/games/sudoku/sudoku.html
+++ b/client/views/games/sudoku/sudoku.html
@@ -17,6 +17,9 @@
 				<div class="number col-xs-4">7</div>
 				<div class="number col-xs-4">8</div>
 				<div class="number col-xs-4">9</div>
+				<div class="number col-xs-4" data-action="close">X</div>
+				<div class="number col-xs-4">&nbsp;</div>
+				<div class="number col-xs-4" data-action="delete"><span class="fa fa-eraser"></span></div>
 			</div>
 		</div>
 
