--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -28,8 +28,8 @@
   #number-select {
     position: absolute;
     z-index: 500;
-    width: 122px;
-    height: 122px;
+    width: 182px;
+    height: 242px;
     border: 1px solid #ccc;
     background-color: #666;
 
@@ -40,12 +40,12 @@
     .number {
       color: #fff;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 22px;
       text-align: center;
-      padding: 8px;
+      padding-top: 12px;
       margin: 0px;
-      width: 40px;
-      height: 40px;
+      width: 60px;
+      height: 60px;
       border: 1px solid #ccc;
       cursor: pointer;
     }
