--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 #view-sudoku {
 
   #game-area {
@@ -10,6 +12,13 @@
       padding-top: 7px;
       text-align: center;
       cursor: pointer;
+    }
+    .cell.selected {
+      background-color: @brandColor;
+      color: #fff;
+    }
+    .cell.active {
+      background-color: #ddd;
     }
     .cell:nth-child(3n) {
       border-right: 2px solid #000;
