--- a/client/views/arenaranking/arenaranking.less
+++ b/client/views/arenaranking/arenaranking.less
@@ -3,10 +3,10 @@
 
 #view-arenaranking{
   width: 100%;
-  border:1px solid red;
+  // border:1px solid red;
   .kingRow{
     height: 60px;
-    border: 1px solid blue;
+    // border: 1px solid blue;
   }
   .kingImage{
     text-align: center;
