--- a/client/views/arenaranking/arenaranking.html
+++ b/client/views/arenaranking/arenaranking.html
@@ -6,14 +6,18 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-6"><h4>Username</h4></div>
-      <div class="col-xs-6"><h4>Score</h4></div>
+      <div class="col-xs-3"><h4>#</h4></div>
+      <div class="col-xs-3"><h4>Username</h4></div>
+      <div class="col-xs-3"><h4>Score</h4></div>
+      <div class="col-xs-3"><h4>Played</h4></div>
     </div>
 
     {{#each sortedRanking arena}}
       <div class="row">
-        <div class="col-xs-6">{{resolveUser this.userId}}</div>
-        <div class="col-xs-6">{{this.points}}</div>
+        <div class="col-xs-3">{{incremented @index}}</div>
+        <div class="col-xs-3">{{resolveUser this.userId}}</div>
+        <div class="col-xs-3">{{this.points}}</div>
+        <div class="col-xs-3">{{this.gamesCount}}</div>
       </div>
     {{/each}}
 
