some style changes

--- a/client/views/common.less
+++ b/client/views/common.less
@@ -11,6 +11,14 @@
   content: '*';
 }
 
+body{
+  background-color: @backgroundColor;
+  font-family: 'Lato';
+
+}
+.headerContainer{
+  background-color: @backgroundColorSecondary;
+}
 /* Use on any element */
 .right {
   text-align: right;
