--- a/client/views/variables.less
+++ b/client/views/variables.less
@@ -8,6 +8,9 @@
 @secondaryColor: #666666;
 @secondaryTextColor: #ffffff;
 
+@backgroundColor:#EFC87B;
+@backgroundColorSecondary:#E5BB6C;
+
 
 /* BORDERS */
 @borderColor: #dddddd;
@@ -17,3 +20,6 @@
 /* DIMENSIONS */
 // use this if you have a position: fixed header and need to have a top-margin on the main container
 @headerHeight: 80px;
+
+
+@import url(http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext);
