--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -1,6 +1,17 @@
 #view-sudoku {
+  .timer{
+
+      font-size: 21px;
+      font-weight: 700;
+      line-height: 30px;
+      color: white;
+
+
+  }
 
   #game-area {
+    margin-top: 10px;
+
     .cell {
       border: 1px solid #aaa;
       height: 50px;
