--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -18,7 +18,7 @@
 		{{!-- if the user is logged in show the header and main yield --}}
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12">
+				<div class="col-xs-12 headerContainer">
 					{{> header}}
 				</div>
 				<div class="col-xs-12" id="main">
