--- a/client/views/login/login.html
+++ b/client/views/login/login.html
@@ -1,5 +1,8 @@
 <template name="login">
     <div class="container" id="view-login">
+        <div class="row">
+            <img src="/images/background/sudokuTitle.png" style="width: 100%">
+        </div>
 		<form id="login-form">
             <div class="row">
                 <div class="col-xs-12 form-group">
