--- a/client/views/arenaranking/arenaranking.less
+++ b/client/views/arenaranking/arenaranking.less
@@ -11,5 +11,16 @@
   .kingImage{
     text-align: center;
   }
+  .number {
+    text-align: right;
+  }
+  // .line-separator {
+  //   border-bottom:1px solid #cccccc;
+  //   padding: 5px 0px;
+  // }
+
+  .row:nth-child(odd) {
+    //background: #e0e0e0;
+  }
 
 }
