--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -13,6 +13,13 @@
       text-align: center;
       cursor: pointer;
     }
+    .cell.error {
+      background-color: #ff0000;
+      color: #fff;
+    }
+    .cell.active.observe {
+      background-color: #f5ff95;
+    }
     .cell.selected {
       background-color: @brandColor;
       color: #fff;
