--- a/client/views/arenaranking/arenaranking.less
+++ b/client/views/arenaranking/arenaranking.less
@@ -11,16 +11,31 @@
   .kingImage{
     text-align: center;
   }
+
+  .title {
+    text-align: center;
+    padding: 15px 0px;
+  }
+
   .number {
     text-align: right;
   }
-  // .line-separator {
-  //   border-bottom:1px solid #cccccc;
-  //   padding: 5px 0px;
-  // }
 
-  .row:nth-child(odd) {
-    //background: #e0e0e0;
+  .line-separator {
+   border-bottom:1px solid #cccccc;
+   padding: 5px 0px;
   }
+
+  .tableRow:nth-child(even) {
+    background: #f9f9f9;
+  }
+
+  .panel-heading {
+    font-style: italic !important;
+    font-weight: bold !important;
+    font-family: sans-serif;;
+    background-color: #D8D8D8 !important;
+  }
+
 
 }
