Added back button to scoreboard page

--- a/client/views/arenaranking/arenaranking.html
+++ b/client/views/arenaranking/arenaranking.html
@@ -30,6 +30,12 @@
     </div>
   </div>
 
+  <div class="row">
+      <a href="/arena/{{arena._id}}" class="col-xs-12" style="text-align: center; height: 40px;margin-top: 10px">
+          <img src="/images/background/arena.png" style="height: 100%">
+      </a>
+  </div>
+
 
   {{fetchUserMap arena}}
 </template>
