--- a/client/views/arenaranking/arenaranking.less
+++ b/client/views/arenaranking/arenaranking.less
@@ -30,12 +30,14 @@
     background: #f9f9f9;
   }
 
-  .panel-heading {
-    font-style: italic !important;
-    font-weight: bold !important;
-    font-family: sans-serif;;
-    background-color: #D8D8D8 !important;
+  .tableRow.active {
+    background-color: #FAEED7;
   }
 
-
+  .panel-heading {
+    font-weight: bold !important;
+    font-family: sans-serif;
+    font-size: 11px;
+    background-color: #D8D8D8 !important;
+  }
 }
