--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -42,17 +42,23 @@
   }
 
   .kingRow {
-    height: 60px;
-    border: 1px solid blue;
+    background-color: white;
+    width: 100%;
+    height: 100px;
+
     position: fixed;
     bottom: 0px;
-    left: 0px;
+    left: 15px;
 
 
   }
   .kingImage {
+    height: 100%;
     text-align: center;
-    border: 1px solid green;
+
+    .profilePic{
+      height: 100%;
+    }
   }
 
 
