Fixed sudokuwon; Added row-validation;

--- a/client/views/games/sudoku/sudoku.html
+++ b/client/views/games/sudoku/sudoku.html
@@ -43,7 +43,7 @@
 				{{/each}}
 			{{/with}}
 		</div>
-        <div class="row">
+        <div class="row" id="back-button">
             <a href="/arena/{{arena._id}}" class="col-xs-12" style="text-align: center; height: 40px;margin-top: 10px">
                 <img src="/images/background/arena.png" style="height: 100%">
 
