added some more css

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -13,12 +13,16 @@
             <div class="row buttonRow">
 
                     <a href="/arena/{{arena._id}}/game/sudoku" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play"><img src="/images/background/play.png">
+                        <div class="col-xs-12 playText" style="text-align: center" >
+                            PLAY!
+                        </div>
 
                     </a>
 
 
 
             </div>
+
 
             <!--div class="row buttonRow">
                 <div class="col-xs-12">
