--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -21,6 +21,14 @@
     color: white;
     padding-top: 10px;
   }
+  .playText{
+    font-size: 27px;
+    font-weight: 900;
+    line-height: 30px;
+    color: white;
+    padding-top: 10px;
+
+  }
 
   .btn-play{
     background: transparent;
@@ -28,11 +36,12 @@
     padding-top: 20px;
     border-radius: 15px;
 
+
   }
 
   .buttonRow {
-    margin-top: 20px;
-    height: 200px;
+    margin-top: 40px;
+    height: 250px;
     text-align: left;
 
     .btn{
