Initial development for gamelobby

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -11,16 +11,22 @@
             </div>
 
             <div class="row buttonRow">
-
                     <a href="/arena/{{arena._id}}/game/sudoku" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play"><img src="/images/background/play.png">
                         <div class="col-xs-12 playText" style="text-align: center" >
-                            PLAY!
+                            <span class="fa fa-user"></span>
                         </div>
 
                     </a>
+            </div>
 
+            <div class="row buttonRow">
 
+                    <a href="/arena/{{arena._id}}/play" class="col-xs-10 col-xs-offset-1 btn btn-default btn-play"><img src="/images/background/play.png">
+                        <div class="col-xs-12 playText" style="text-align: center" >
+                              <span class="fa fa-users"></span>
+                        </div>
 
+                    </a>
             </div>
 
 
