--- a/client/views/lobbies/arenalobby/arenalobby.less
+++ b/client/views/lobbies/arenalobby/arenalobby.less
@@ -30,22 +30,30 @@
 
   }
 
-  .btn-play{
-    background: transparent;
-    border:3px solid white;
-    padding-top: 20px;
-    border-radius: 15px;
 
-
-  }
-
-  .buttonRow {
+  .buttonRow:first-child {
     margin-top: 40px;
-    height: 250px;
+  }
+  .buttonRow {
+    height: 200px;
     text-align: left;
 
     .btn{
       height: 100%;
+    }
+
+    .btn-play{
+      background: transparent;
+      border:3px solid white;
+      border-radius: 15px;
+    }
+
+    .fa {
+      position: absolute;
+      top: 15px;
+      left: 60px;
+      color: #fff;
+      font-size: 32px;
     }
 
   }
