--- a/client/views/games/sudoku/sudoku.less
+++ b/client/views/games/sudoku/sudoku.less
@@ -34,6 +34,9 @@
       background-color: #ff0000;
       color: #fff;
     }
+    .cell.observe {
+      background-color: #f5ff95;
+    }
     .cell.active.observe {
       background-color: #f5ff95;
     }
