Small stylesheet changes to ranking

--- a/client/views/arenaranking/arenaranking.less
+++ b/client/views/arenaranking/arenaranking.less
@@ -15,6 +15,9 @@
   .title {
     text-align: center;
     padding: 15px 0px;
+    color: @brandColor;
+    font-size: 20px;
+    text-transform: uppercase;
   }
 
   .number {
