--- a/client/views/arenaranking/arenaranking.html
+++ b/client/views/arenaranking/arenaranking.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-4 col-xs-offset-4 title"><h1>Scoreboard</h1></div>
+      <div class="col-xs-4 col-xs-offset-4 title">Scoreboard</div>
     </div>
 
     <div class="panel-heading">
