--- a/client/views/common.less
+++ b/client/views/common.less
@@ -1,5 +1,5 @@
 @import "variables";
-
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
 /*
  * Use this for form labels of required fields: <label>My Label <span class="required"></span></label> - this will
  * render a red asterisk next to the label.
@@ -13,7 +13,7 @@
 
 body{
   background-color: @backgroundColor;
-  font-family: 'Lato';
+  font-family: 'Josefin Slab', serif;
 
 }
 .headerContainer{
