--- a/client/views/login/login.html
+++ b/client/views/login/login.html
@@ -4,13 +4,14 @@
             <img src="/images/background/sudokuTitle.png" style="width: 100%">
         </div>
 		<form id="login-form">
+            <label for="login-form"><h4>Prepare to battle...</h4></label>
             <div class="row">
                 <div class="col-xs-12 form-group">
-                    <label for="username">Username</label>
+                    <!--<label for="username">Username</label>-->
                     <input type="text" class="form-control" id="username" placeholder="Username"/>
                 </div>
                 <div class="col-xs-12 form-group">
-                    <label for="password">Password</label>
+                    <!--<label for="password">Password</label>-->
                     <input type="password" class="form-control" id="password" placeholder="Password"/>
                 </div>
                 <div class="col-xs-12 form-group">
