--- a/client/views/variables.less
+++ b/client/views/variables.less
@@ -13,6 +13,10 @@
 @backgroundColor:#EFC87B;
 @backgroundColorSecondary:#E5BB6C;
 
+@backgroundColorCompliment: #4A8F8F;
+@backgroundColorComplimentDark: #2C7878;
+@backgroundColorComplimentLight: #76B1B1;
+
 
 /* BORDERS */
 @borderColor: #dddddd;
