--- a/client/views/dashboard/mapControl/mapControl.less
+++ b/client/views/dashboard/mapControl/mapControl.less
@@ -8,7 +8,7 @@
     height: 400px;
     padding: 0px;
     margin-top: 20px;
-    border: 2px solid #7bc143 ;
+    border: 2px solid @backgroundColorCompliment;
 
   }
 
