added arena king image and heading to arena scoreboard

--- a/client/views/arenaranking/arenaranking.html
+++ b/client/views/arenaranking/arenaranking.html
@@ -2,7 +2,8 @@
   <div id="view-arenaranking" class="panel panel-default">
 
     <div class="row kingRow">
-      <div class="col-xs-4 col-xs-offset-4 kingImage">{IMAGE OF KING}</div>
+        <div class="col-xs-4 col-xs-offset-4 title">King of the {{arena.name}} arena</div>
+      <div class="col-xs-4 col-xs-offset-4 kingImage"><img class='profilePic' src="/images/profiles/{{king.picture}}"></div>
     </div>
 
     <div class="row">
