improved text on dashboard

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -36,7 +36,7 @@
 				</div>
 
 				<div class="col-xs-4">
-					<p>{{king.name}}</p>
+                        King: {{king.name}}
 					<div class="col-xs-6">
 						Games
 					</div>
