--- a/client/views/dashboard/dashboard.html
+++ b/client/views/dashboard/dashboard.html
@@ -1,12 +1,14 @@
 <template name="dashboard">
     <div id="view-dashboard">
         {{#if minDistance}}
-			<button id="enter-button" class="full-width btn btn-primary" data-arena-id="{{closest._id}}">
-				Enter {{closest.name}}
+            <h4>You're in range of the {{closest.name}} arena!</h4>
+            <button id="enter-button" class="full-width btn btn-primary" data-arena-id="{{closest._id}}">
+				Enter Arena
 			</button>
             {{else}}
+            <h4>Your nearest arena is: {{closest.name}}</h4>
             <button class="full-width btn btn-primary getToButton">
-                Get to {{closest.name}}
+                Get directions to {{closest.name}}
             </button>
         {{/if}}
         {{>mapControl}}
