fixed minor layout issue on game arena

--- a/client/views/lobbies/arenalobby/arenalobby.html
+++ b/client/views/lobbies/arenalobby/arenalobby.html
@@ -9,6 +9,7 @@
                     {{arena.name}}<br/>
                 </div>
             </div>
+            <div class="row"><p></p></div>
 
             <div class="row buttonRow">
 				<div class="col-xs-12">
@@ -34,9 +35,8 @@
                 </a>
                 <div class="col-xs-4 kingImage"><img class='profilePic' src="/images/profiles/{{king.picture}}">
 				</div>
-
+                {{king.name}}
 				<div class="col-xs-4">
-                        King: {{king.name}}
 					<div class="col-xs-6">
 						Games
 					</div>
